--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
                     <compilerArgs>
                         <arg>--enable-preview</arg>
                         <arg>--add-modules=jdk.incubator.concurrent</arg>
+                        <arg>--add-modules=jdk.incubator.vector</arg>
                     </compilerArgs>
 				</configuration>
 			</plugin>
